--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button>Project 2</button>
           </div>
           <div class="box">
-            <img src="https://picsum.photos/id/2/400/400" />
+            <img src="https://res.cloudinary.com/dwalpoi9z/image/upload/v1739351062/3b136f39-3c98-40a2-b317-be15f68d6a97_ssbv1s.jpg" />
           </div>
         </div>
       </div>
@@ -90,42 +90,42 @@
           <div class="box">
             <h3>Web App Development</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
-              aliquid ut eveniet. Et illum odio ut voluptates molestiae?
-              Perspiciatis, ab.
+              Building <b>high-performance, scalable, and 
+              user-friendly web applications</b> using modern frameworks and technologies.
+              Whether it's a <b>dynamic web platform, an interactive dashboard, or a data-driven application</b>, 
+              I ensure seamless functionality, intuitive design, and optimized performance.
             </p>
           </div>
 
           <div class="box">
             <h3>Mobile App Development</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
-              aliquid ut eveniet. Et illum odio ut voluptates molestiae?
-              Perspiciatis, ab.
+              Developing <b>responsive and efficient mobile applications</b> tailored for <b>iOS</b> and <b>Android</b> platforms.
+              Leveraging frameworks like <b>React Native</b> or <b>Flutter</b>
+              ,I create feature-rich apps with <b>smooth user experiences, robust backend integrations, and performance-driven architecture.</b>
             </p>
           </div>
 
           <div class="box">
             <h3>Backend Development</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
-              aliquid ut eveniet. Et illum odio ut voluptates molestiae?
-              Perspiciatis, ab.
+              Designing and implementing <b>secure, scalable, and high-performing backend systems.</b>
+              Specializing in <b>API development, database management, authentication, and cloud deployments</b>,
+              I ensure seamless data flow, efficient server-side processing, and
+              reliable infrastructure for web and mobile applications.
             </p>
           </div>
         </div>
       </div>
       <div id="about" class="row">
         <h1>About</h1>
-        <h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sint
-          optio labore a obcaecati. Ullam distinctio corrupti autem. Veritatis
-          ipsa veniam deserunt asperiores nesciunt at provident itaque
-          cupiditate vel dolor.
-        </h3>
+        <p>
+          <i>This <b>Portfolio</b> presents a curated selection of my work, highlighting projects, technical competencies, and domain expertise. Whether you seek to explore my innovations or discuss potential collaborations, I invite you to navigate through my work.
+
+          I appreciate your time and interest in visiting.</i>
+
+
+          </p>
         <h2>Skills</h2>
         <h3>Java, Python, Reactjs</h3>
         <p>Display the logo of all the technologies you know.</p>
@@ -154,18 +154,16 @@
           </div>
 
           <div class="box">
-            <h3>Your/Company Name</h3>
+            <h3>Samatha Reddy</h3>
             <p>
-              <b>Address: </b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
-              aliquid ut eveniet. Et illum odio ut voluptates molestiae?
-              Perspiciatis, ab.
+              <b>Address: </b>5 avenue Anatole France - Champ de Mars
+              75007 Paris
             </p>
             <p>
-              <b>Email Address: </b>sample@email.com
+              <b>Email Address: </b>samathareddy40933@email.com
             </p>
             <p>
-              <b>Phone Number: </b>+91 343 445 6789
+              <b>Phone Number: </b>+91 9876543210
             </p>
           </div>
         </div>
