--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
         <h1>Projects</h1>
         <div style="display: flex">
           <div class="box">
-            <h3><a href="https://samatha-07.github.io/project/">Project 1</a></h3>
+            <h3><a href=" https://samatha-07.github.io/project/">Project 1</a></h3>
+            <a href=" https://samatha-07.github.io/project/">Project 1</a></h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
-              aliquid ut eveniet. Et illum odio ut voluptates molestiae?
-              Perspiciatis, ab.
+              <b>🍔🔥 Savor the Flavors with [HUNGER SPOT] 🍗🥤</b>
+
+                Craving something delicious? We've got you covered!
+                we serve up mouthwatering burgers, flavorful biryanis, refreshing shakes, and more—delivered fresh to your doorstep.
+                Whether you're in the mood for a cheesy, juicy burger or a rich, aromatic biryani, we bring you the best of taste and quality.
             </p>
           </div>
 
