--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3><a href=" https://samatha-07.github.io/project/">Project 1</a></h3>
             <a href=" https://samatha-07.github.io/project/">Project 1</a></h3>
             <p>
-              <b>🍔🔥 Savor the Flavors with [HUNGER SPOT] 🍗🥤</b>
+              <b>🍔🔥 Savor the Flavors with <i>"HUNGER SPOT"</i> 🍗🥤</b>
 
                 Craving something delicious? We've got you covered!
                 we serve up mouthwatering burgers, flavorful biryanis, refreshing shakes, and more—delivered fresh to your doorstep.
