--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <h1>Projects</h1>
         <div style="display: flex">
           <div class="box">
-            <h3><a href=" https://samatha-07.github.io/project/">Project 1</a></h3>
-            <a href=" https://samatha-07.github.io/project/">Project 1</a></h3>
+            <h3><a href=" https://samatha-07.github.io/project/">FOOD STORE</a></h3>
             <p>
               <b>🍔🔥 Savor the Flavors with <i>"HUNGER SPOT"</i> 🍗🥤</b>
 
