--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
             <p>
               <i>This <b>Portfolio</b> is a testament to my dedication, passion, and expertise in data science. From ideation to execution, I invested countless hours into research, development, and fine-tuning every detail to ensure excellence. With a strong analytical approach and a deep understanding of problem-solving, I built this project to not only demonstrate my technical skills but also to create a meaningful impact. Every challenge I faced was an opportunity to learn and innovate, making this project a true reflection of my commitment to excellence and continuous growth.</i>
             </p>
-            <button>Click Here!</button>
+            <a href="https://samatha-07.github.io/project/">
+            <button >Click Here!</button>
             <button>Project 2</button>
+            </a>
           </div>
           <div class="box">
             <img src="https://res.cloudinary.com/dwalpoi9z/image/upload/v1739351062/3b136f39-3c98-40a2-b317-be15f68d6a97_ssbv1s.jpg" />
