--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
           </div>
 
           <div class="box">
-            <h3>Project 2</h3>
+            <h3><a href ="https://samatha-07.github.io/project-2/"><b>LOGIN</b></a></h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
-              aliquid ut eveniet. Et illum odio ut voluptates molestiae?
-              Perspiciatis, ab.
+              <b>💰🏦 Experience Secure Banking with <i>"BANK OF SAM"</i> 🔐💳</b>
+
+                Looking for a smart and reliable banking solution? We've got you covered!
+                At Bank of Sam, we offer a secure, user-friendly, and efficient platform where you can manage your finances with ease.
+                From hassle-free logins to smooth transactions, we ensure top-tier security and an exceptional banking experience.
             </p>
           </div>
 
